# LESS

./: README.md  pyproject.toml  requirement.txt
less/data_selection/: collect_grad_reps.py  get_info.py  get_training_dataset.py  get_validation_dataset.py  matching.py  write_selected_data.py
less/scripts/data_selection/: matching.sh
less/scripts/get_info/grad/: get_eval_lora_grads.py  get_train_lora_gards.py  get_train_lora_grads.py  get_train_lora_grads.sh
less/scripts/train/: warmup_lora_train.py  warmup_lora_train.sh
