[tool.poetry]
name = "less"
version = "0.1.0"
description = ""
authors = ["rinapch <arina.puchkova@jetbrains.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
peft = "0.7.1"
transformers = "4.36.2"
traker = "0.1.3"
torch = "2.1.2"
fire = "^0.7.0"
datasets = "^3.1.0"
numpy = "<2"
accelerate = "0.28.0"
wandb = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
